kubernetes/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudkart
  labels:
    name: cloudkart
    environment: dev
    project: cloudkart
